<resources>
    <string name="app_name">Layouts</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="jo_o_da_silva">João da Silva</string>
    <string name="email">pessoal@fiap.com.br</string>
    <string name="bot_o_no_final_do_app">Botão no final do app</string>
    <string name="voltar">Voltar</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="salvar">Salvar</string>
    <string name="absolute_layout">absolute layout</string>
    <string name="um_botao_qualquer">Um botao qualquer</string>
    <string name="table_layout">Table layout</string>
    <string name="botao_1">botao 1</string>
    <string name="botao_2">botao 2</string>
    <string name="constraint_layout">Constraint layout</string>
</resources>
