<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pipa"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="@dimen/width_linear_layout_login"
        android:layout_height="wrap_content"
        android:background="#CFFF"
        android:padding="@dimen/margin_padding_padrao"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimensao_altura_linear_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usu_rio"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"/>

    </LinearLayout>

</FrameLayout>
